--- a/views/redirect.html
+++ b/views/redirect.html
@@ -98,7 +98,7 @@
             <script type="text/javascript">   
                 function Redirect() 
                 {  
-                    window.location="Ens.dk"; 
+                    window.location="https://ens.dk/"; 
                 } 
                 document.write('<img src="/static/right.jpg">')
                 setTimeout('Redirect()', 2000);   
