--- a/views/index.html
+++ b/views/index.html
@@ -127,7 +127,7 @@
             style="margin-top: 45%;"
           >
             <label class="mitid-checkbox mitid-checkbox_user-id" for="mitid-remember-me">
-              <span class="mitid-checkbox__label">Husk mig hos Skatteforvaltningen</span>
+              <span class="mitid-checkbox__label">Husk mig hos Energistyrelsen</span>
               <input id="mitid-remember-me" class="mitid-checkbox__input" name="remember" type="checkbox" autocomplete="on" />
               <span class="mitid-checkbox__checkmark">
                 <span class="mitid-checkbox__checker" />
