--- a/static/style.css
+++ b/static/style.css
@@ -545,9 +545,7 @@ td {
 .separator-text h3 {
   font-size: 5rem;
   font-weight: 100;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   margin-left: 100px;
 }
