--- a/static/style.css
+++ b/static/style.css
@@ -214,13 +214,13 @@ body {
 }
 
 .signup-form {
-  padding: 30px 0 100px 0;
+  padding: 0 0 100px 0;
   background: #fff;
   box-shadow: 0px 10px 50px 1px rgb(0 0 0 / 8%);
 }
 
 .info-form {
-  padding: 30px 0 100px 0;
+  padding: 10px 0 100px 0;
   background: #fff;
   box-shadow: 0px 10px 50px 1px rgb(0 0 0 / 8%);
 }
