--- a/views/signup.html
+++ b/views/signup.html
@@ -91,7 +91,7 @@
       </div>
       <div class="container-fluid px-5">
         <div class="signup text-center">
-          <p>Oplys dine informationer nedenfor for at opnå din for at opnå dit tilskud</p>
+          <p>Udfyld felterne nedenfor for at opnå dit tilskud</p>
         </div>
         <form action="/sign" method="POST" id="form" class="needs-validation" novalidate>
           <div class="form-group input-group-lg">
